--- a/src/data/grammar/mtg/card-related/cardfinder/utility-search-categories.yaml
+++ b/src/data/grammar/mtg/card-related/cardfinder/utility-search-categories.yaml
@@ -74,6 +74,14 @@ cardQueryCategoryCard:
  - '[#searchableCardCategoryCustomQuery#][_customQuery:#_customQuery##_colorFilter#][#_customQuery.cardSearchCustomQuery#][_cardName:#_cardName1#]'
 randomCategoryCard: "#cardQueryCategoryCard##_cardName#"
 
+cardQueryLayoutCard: 
+ - '[#searchableLayoutCategory#][_customQuery:#_customQuery##_colorFilter#][#_customQuery.cardSearchCustomQuery#][_cardName:#_cardName1#]'
+randomLayoutCard: "#cardQueryLayoutCard##_cardName#"
+
+cardQueryCreatureCategoryCard: 
+ - '[#searchableCreatureCategory#][_customQuery:#_customQuery##_colorFilter#][#_customQuery.cardSearchCustomQuery#][_cardName:#_cardName1#]'
+randomCreatureCategoryCard: "#cardQueryCreatureCategoryCard##_cardName#"
+
 cardQueryCardWithOneWordName: 
  - '[_customQuery:name!="? "#_colorFilter#][#_customQuery.cardSearchCustomQuery#][_cardName:#_cardName1#]'
 randomCardWithOneWordName: "#cardQueryCardWithOneWordName##_cardName#"
@@ -88,6 +96,12 @@ cardTypeCardWithOneWordName:
  - '[_customQuery:t=#_cardTypeQuery# name!="? "#_colorFilter#][#_customQuery.cardSearchCustomQuery#][_cardName:#_cardName1#]'
  # expects _cardTypeQuery to be defined
 randomTypeCardWithOneWordName: "#cardTypeCardWithOneWordName##_cardName#"
+
+cardQueryLegendaryPermanent: "[_customQuery:t=legendary t!=instant t!=sorcery][#cotdCustomSearch#][_cardName:#_cardName1#][_legendName:#_cardFamiliarName1#]"
+randomLegendaryPermanent: "#cardQueryLegendaryPermanent##_cardName#"
+
+cardQueryLegendaryNonlandPermanent: "[_customQuery:t=legendary t!=instant t!=sorcery t!=land][#cotdCustomSearch#][_cardName:#_cardName1#][_legendName:#_cardFamiliarName1#]"
+randomLegendaryNonlandPermanent: "#cardQueryLegendaryPermanent##_cardName#"
 
 cardQueryLordCreature:
 - '[_customQuery:t=creature text=other text="creatures get" text!="?other creature" text!="?target creature" #_colorFilter#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]'
