--- a/src/data/grammar/mtg/community/mtg-pros.yaml
+++ b/src/data/grammar/mtg/community/mtg-pros.yaml
@@ -123,7 +123,7 @@
       "Hall-of-Famer[#somePronoun#]",
       "#psychographic#[#somePronoun#]",
       "netdecker[#somePronoun#]",
-      "[_redditors:redditors,r/magicTCG posters]#_redditors#[#somePronoun#]",
+      "[_redditor:redditor,r/magicTCG poster]#_redditor#[#somePronoun#]",
       "#deck# player[#somePronoun#]",
       "#deck# player[#somePronoun#]",
       "#format# player[#somePronoun#]",
