wizards needs brackets, badly

--- a/src/data/grammar/mtg/community/mtg-pros.yaml
+++ b/src/data/grammar/mtg/community/mtg-pros.yaml
@@ -223,7 +223,7 @@
   ],
 
   "officialEntityGroup": [
-    "Wizards#neutralPronouns#]",
+    "Wizards[#neutralPronouns#]",
     "WOTC[#neutralPronouns#]",
     "R&D[#neutralPronouns#]",
     "The DCI[#neutralPronouns#]",
