more and varied stupid solutions; money tip prefixes

--- a/src/data/grammar/headlines/comic-titles.yaml
+++ b/src/data/grammar/headlines/comic-titles.yaml
@@ -3,11 +3,11 @@
     [ "#planeswalkerFirstName#'s [_what:Ultimate,#collectiveActionOrRealm#]#_what.capitalizeAll#"
     , "[_action:Flight,#collectiveActionOrRealm#]#_action.capitalize# of the [_adj:#adj#,#adjStorybook#,#adjCorporeal#,#adjColorOrTexture#][_adj:#_adj#,#basicColors#][_flyer:Cat,Goat,Snake,Turkey,Pony,#animal#,#creatureTypeOrCharacterClass#]#_adj.capitalizeAll# #_flyer.capitalize#", "Fuel for the #massNoun.capitalize#"
     , "The #creatureTypes.capitalize#'s Fall"
-    , "#abstractNoun.capitalize# Bound"
+    , "#abstractNoun.capitalizeAll# Bound"
     , "The #itemNoun.capitalizeAll#'s Curse"
     , "Journey to the #bodypart.capitalize#"
     , "Enter the #creatureTypesPlural.capitalize#"
-    , "The #creatureTypes.capitalize#'s #bodypart.capitalize#"
+    , "The #creatureTypes.capitalizeAll#'s #bodypart.capitalize#"
     , "Gathering Forces"
     , "Scarred"
     , "#adj.capitalize# Discoveries"
