--- a/src/data/grammar/mtg/community/mtg-pros.yaml
+++ b/src/data/grammar/mtg/community/mtg-pros.yaml
@@ -219,7 +219,8 @@
     "Richard Kane Ferguson[#malePronouns#]",
     "Jesper Myrfors[#malePronouns#]",
     "Brian Snøddy[#malePronouns#]",
-    "Zoltan Boros and Gabor Szikszai[#pluralPronouns#]"
+    "Zoltan Boros and Gabor Szikszai[#pluralPronouns#]",
+    "Claymore J. Flapdoodle[#somePronoun#]"
   ],
 
   "officialEntityGroup": [
